[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndif"
version = "0.0.1"
description = "The NDIF server, which performs deep inference and serves nnsight requests remotely"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # CLI
    "click>=8.0.0",

    # Core API dependencies
    "fastapi==0.108.0", # Note: pinned version for Socket.IO compatibility
    "fastapi-cache2",
    "fastapi-socketio",
    "python-socketio==5.13.0", # Note: pinned version for Socket.IO compatibility
    "redis",
    "psycopg2-binary",
    "uvicorn[standard]==0.24.0",
    "gunicorn",
    "eventlet",

    # Ray dependencies
    "ray[serve]>=2.50.0",
    "nnsight",

    # Storage and utilities
    "boto3",
    "torch",
    "python-slugify",
    "requests",
]

[project.scripts]
ndif = "cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
exclude = ["src*", "docker*", "scripts*", "tests*"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
]
