[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndif"
version = "0.0.1"
description = "The NDIF server, which performs deep inference and serves nnsight requests remotely"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # CLI
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    # Local mode dependencies
    "fastapi==0.108.0", # Note: pinned version for Socket.IO compatibility
    "python-socketio==5.13.0", # Note: pinned version for Socket.IO compatibility
    "uvicorn[standard]==0.24.0",
    "zstandard",
    "nnsight",
    "torch",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    # Full server infrastructure
    "fastapi-cache2",
    "fastapi-socketio",
    "redis",
    "psycopg2-binary",
    "gunicorn",
    "eventlet",
    "ray[serve]>=2.50.0",
    "boto3",
    "python-slugify",
    "requests",
    "RestrictedPython>=7.0",
]

[project.scripts]
ndif = "cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "src*"]
exclude = ["docker*", "scripts*", "tests*"]

[tool.setuptools.package-data]
"src.services.api" = ["start.sh"]
"src.services.ray" = ["start.sh"]
"src.services.ray.src.ray.nn.security" = ["whitelist.yaml"]

[tool.uv.sources]
nnsight = { git = "https://github.com/ndif-team/nnsight", rev = "v0.5.16" }

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
]
