[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndif-api"
version = "0.1.0"
authors = [
    { name = "Michael Ripa", email = "m.ripa@northeastern.edu" },
]
description = "API service for the NDIF project"
requires-python = ">=3.7"

dependencies = [
    # API Dependencies
    "fastapi-cache2",
    "fastapi==0.108.0",
    "fastapi-socketio",
    "python-socketio",
    "redis",
    "firebase-admin",
    
    # Telemetry
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "prometheus-fastapi-instrumentator",
    
    # HTTP Server
    "uvicorn[standard]==0.24.0",
    "gunicorn",
    "eventlet",

    # Ray
    "ray[serve]",
    "python-slugify",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ndif.api"]