[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndif-ray"
version = "0.1.0"
authors = [
    { name = "Michael Ripa", email = "m.ripa@northeastern.edu" },
]
description = "Ray service for the NDIF project"
requires-python = ">=3.7"

dependencies = [
    # Ray and ML
    "ray[serve]",
    "python-slugify",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ndif.ray"]