#
[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "ndif-tests"
version = "0.0.1"

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src/services/ray/src"]
markers = [
  "raymock: uses mocked external Ray APIs (fast)",
  "integration: requires real Ray runtime (slow)"
]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = [
  "src/services/ray/src/ray/deployments",
  "src/services/ray/src/ray/distributed",
  "src/services/ray/src/ray/nn"
]
branch = true
